--- a/main_classifier/do spectrogram.ipynb
+++ b/main_classifier/do spectrogram.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19e5e9c4",
+   "execution_count": 57,
+   "id": "c6b46fd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-57-7cdf32496299>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[0maudio\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAudioHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m     \u001b[1;31m# open the the stream\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 48\u001b[1;33m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmainloop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# main operations with librosa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     49\u001b[0m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-57-7cdf32496299>\u001b[0m in \u001b[0;36mmainloop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     41\u001b[0m             \u001b[1;31m#self.callback(self.stream, 10, 10, 10)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m             \u001b[1;31m#print(mfcc)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 43\u001b[1;33m             \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2.0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pyaudio\n",
@@ -60,8 +73,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28fc6f09",
+   "execution_count": 61,
+   "id": "04b887c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b592752e",
+   "id": "7ac43565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "491648b6",
+   "id": "728b420d",
    "metadata": {},
    "outputs": [
     {
@@ -225,27 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "8d2ac713",
+   "execution_count": 67,
+   "id": "d525c87a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[7.73457298e-03 3.36363586e-03 9.62352846e-04 ... 1.13828443e-02\n",
-      "  2.28588313e-01 9.93078589e-01]\n",
-      " [7.37594615e-04 3.43477051e-03 3.75069585e-03 ... 4.65829745e-02\n",
-      "  4.96350259e-01 1.79331243e+00]\n",
-      " [6.37506600e-04 5.48760034e-03 6.36794651e-03 ... 1.35567412e-01\n",
-      "  9.90915656e-01 4.25363302e+00]\n",
-      " ...\n",
-      " [6.07489346e-06 6.39956761e-06 1.15806934e-05 ... 6.02236986e-02\n",
-      "  3.54126245e-02 2.22802572e-02]\n",
-      " [1.65086312e-05 1.33509275e-05 1.42728586e-05 ... 2.14614887e-02\n",
-      "  2.04214454e-02 1.88502911e-02]\n",
-      " [8.09845915e-06 5.75503964e-06 5.06192600e-06 ... 9.65656415e-02\n",
-      "  7.54954740e-02 6.82915896e-02]]\n"
+     "ename": "IndexError",
+     "evalue": "invalid index to scalar variable.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-67-451e87c9358b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: invalid index to scalar variable."
      ]
     }
    ],
@@ -255,17 +260,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "e89261d7",
+   "execution_count": 63,
+   "id": "66620d46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x19299dc5070>"
+       "<matplotlib.collections.QuadMesh at 0x1929d30a040>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -287,7 +292,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbc9b5bd",
+   "id": "90320634",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09516fce",
    "metadata": {},
    "outputs": [],
    "source": []
