--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = load_model(r'D:\\save_1.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -245,14 +254,14 @@
    "source": [
     "n = 30\n",
     "generator = ImageDataGenerator(rescale=1./255)\n",
-    "predict_generator = generator.flow_from_directory('/home/aigaf/Desktop/GitHub/Save_Transport/dataset/test',\n",
+    "predict_generator = generator.flow_from_directory(r'D:\\reposetory\\Save_Transport\\dataset\\test',\n",
     "                                               target_size=(150, 150),  shuffle = True, batch_size = n)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +321,7 @@
        "0.9833333333333333"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,17 +332,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[29,  1],\n",
-       "       [ 0, 30]])"
+       "       [ 0, 30]], dtype=int64)"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,20 +350,6 @@
    "source": [
     "confusion_matrix(y_true, y_pred)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -380,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
