--- a/RealTime/RealTime.ipynb
+++ b/RealTime/RealTime.ipynb
@@ -126,9 +126,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 64-bit ('base': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python377jvsc74a57bd00d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -140,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
