--- a/main_classifier/model.ipynb
+++ b/main_classifier/model.ipynb
@@ -226,16 +226,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = load_model('/home/aigaf/Downloads/Telegram Desktop/save_1.h5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = load_model(r'D:\\save_1.h5')"
+    "model = load_model('/home/aigaf/Downloads/Telegram Desktop/save_1.h5')\n",
+    "#model = load_model(r'D:\\save_1.h5')"
    ]
   },
   {
@@ -255,8 +247,7 @@
     "n = 30\n",
     "generator = ImageDataGenerator(rescale=1./255)\n",
     "predict_generator = generator.flow_from_directory(r'D:\\reposetory\\Save_Transport\\dataset\\test',\n",
-    "                                               target_size=(150, 150),  shuffle = True, batch_size = n)\n",
-    "\n"
+    "                                               target_size=(150, 150),  shuffle = True, batch_size = n)\n"
    ]
   },
   {
