--- a/main_classifier/live.ipynb
+++ b/main_classifier/live.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,23 @@
     "import time\n",
     "import librosa\n",
     "import matplotlib.pyplot as plt\n",
-    "import librosa.display"
+    "import librosa.display\n",
+    "from tensorflow.keras.models import load_model\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessDataForNN(img_arr): \n",
+    "    \n",
+    "    img_norm = img_arr/255\n",
+    "    img_size = img_norm.resize((150, 150, 3))\n",
+    "    img_compl = img_norm.reshape(-1, 150, 150, 3)\n",
+    "    \n",
+    "    return img_compl"
    ]
   },
   {
@@ -36,23 +52,112 @@
     "    fig.clf()\n",
     "    plt.close(fig)\n",
     "    plt.close('all')\n",
+    "\n",
+    "    del sample_rate,fig,ax\n",
     "    \n",
     "    return spectrogram\n",
-    "    del filename,clip,sample_rate,fig,ax,S"
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "* recording\n",
+      "* recording\n",
       "* done recording\n",
-      "is done\n"
+      "[[0.01024798 0.99001646]]\n",
+      "* done recording\n",
+      "[[0.01024625 0.9900182 ]]\n",
+      "* done recording\n",
+      "[[0.01024801 0.99001634]]\n",
+      "* done recording\n",
+      "[[0.01024812 0.9900163 ]]\n",
+      "* done recording\n",
+      "[[0.00977489 0.9904865 ]]\n",
+      "* done recording\n",
+      "[[8.8918209e-04 9.9924755e-01]]\n",
+      "* done recording\n",
+      "[[0.01012743 0.9901378 ]]\n",
+      "* done recording\n",
+      "[[0.00977364 0.9904846 ]]\n",
+      "* done recording\n",
+      "[[0.01009974 0.9901644 ]]\n",
+      "* done recording\n",
+      "[[0.01024386 0.9900204 ]]\n",
+      "* done recording\n",
+      "[[0.00831437 0.9919326 ]]\n",
+      "* done recording\n",
+      "[[0.010003  0.9902594]]\n",
+      "* done recording\n",
+      "[[0.0102483 0.9900161]]\n",
+      "* done recording\n",
+      "[[0.01024711 0.9900173 ]]\n",
+      "* done recording\n",
+      "[[0.00746778 0.9928165 ]]\n",
+      "* done recording\n",
+      "[[0.00932312 0.99093604]]\n",
+      "* done recording\n",
+      "[[0.01013616 0.9901278 ]]\n",
+      "* done recording\n",
+      "[[0.01024085 0.9900234 ]]\n",
+      "* done recording\n",
+      "[[0.01024756 0.9900167 ]]\n",
+      "* done recording\n",
+      "[[0.01024753 0.99001694]]\n",
+      "* done recording\n",
+      "[[0.01024801 0.9900164 ]]\n",
+      "* done recording\n",
+      "[[0.01018789 0.99007726]]\n",
+      "* done recording\n",
+      "[[0.01016384 0.9900999 ]]\n",
+      "* done recording\n",
+      "[[0.01022294 0.9900411 ]]\n",
+      "* done recording\n",
+      "[[0.0102464 0.990018 ]]\n",
+      "* done recording\n",
+      "[[0.0102441  0.99002033]]\n",
+      "* done recording\n",
+      "[[0.01024339 0.9900211 ]]\n",
+      "* done recording\n",
+      "[[0.0101735 0.9900901]]\n",
+      "* done recording\n",
+      "[[0.0102416 0.9900229]]\n",
+      "* done recording\n",
+      "[[0.01024774 0.9900167 ]]\n",
+      "* done recording\n",
+      "[[0.01023951 0.9900248 ]]\n",
+      "* done recording\n",
+      "[[0.01024756 0.9900168 ]]\n",
+      "* done recording\n",
+      "[[0.01024795 0.99001646]]\n",
+      "* done recording\n",
+      "[[0.00995398 0.9903037 ]]\n",
+      "* done recording\n",
+      "[[0.01022542 0.99003935]]\n",
+      "* done recording\n",
+      "[[0.00951734 0.99074376]]\n",
+      "* done recording\n",
+      "[[0.00959498 0.9906573 ]]\n",
+      "* done recording\n",
+      "[[0.01019165 0.99007165]]\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-5657e4db627e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0mframes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRATE\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mCHUNK\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mRECORD_SECONDS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCHUNK\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0mframes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/pyaudio.py\u001b[0m in \u001b[0;36mread\u001b[0;34m(self, num_frames, exception_on_overflow)\u001b[0m\n\u001b[1;32m    606\u001b[0m                           paCanNotReadFromAnOutputOnlyStream)\n\u001b[1;32m    607\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 608\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mpa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_stream\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stream\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_frames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexception_on_overflow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    609\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    610\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_read_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -76,35 +181,49 @@
     "\n",
     "print(\"* recording\")\n",
     "\n",
+    "CHUNK = 1024\n",
+    "FORMAT = pyaudio.paFloat32\n",
+    "CHANNELS = 2\n",
+    "RATE = 44100\n",
+    "RECORD_SECONDS = 1.5\n",
+    "#WAVE_OUTPUT_FILENAME = \"output.wav\"\n",
+    "\n",
+    "p = pyaudio.PyAudio()\n",
+    "stream = p.open(format=FORMAT,\n",
+    "                channels=CHANNELS,\n",
+    "                rate=RATE,\n",
+    "                input=True,\n",
+    "                frames_per_buffer=CHUNK)\n",
+    "\n",
+    "print(\"* recording\")\n",
+    "\n",
     "frames = []\n",
-    "pull = []\n",
     "\n",
-    "for i in range(0, int(RATE / CHUNK * RECORD_SECONDS)):\n",
-    "    data = stream.read(CHUNK)\n",
-    "    frames.append(data)\n",
-    "    pull.extend(data)\n",
+    "model = load_model('/home/aigaf/Downloads/Telegram Desktop/save_1.h5')\n",
     "\n",
-    "print(\"* done recording\")\n",
+    "while(True):  \n",
+    "    frames = []  \n",
+    "    for i in range(0, int(RATE / CHUNK * RECORD_SECONDS)):\n",
+    "        data = stream.read(CHUNK)\n",
+    "        frames.extend(data)\n",
+    "    \n",
+    "    #print(\"* done recording\")\n",
     "\n",
-    "pull = bytes(pull)\n",
+    "    frames = bytes(frames)\n",
     "\n",
-    "frames = b''.join(frames)\n",
-    "\n",
-    "if pull == frames:\n",
-    "    print(\"is done\")\n",
-    "else:\n",
-    "    print(\"not done\")\n",
-    "\n",
-    "numpy_array = np.frombuffer(frames, dtype=np.float32)\n",
-    "sp = create_spectrogram(numpy_array, RATE)\n",
-    "#print(sp)\n",
+    "    numpy_array = np.frombuffer(frames, dtype=np.float32)\n",
+    "    sp = create_spectrogram(numpy_array, RATE)\n",
+    "    img_compl = preprocessDataForNN(sp)\n",
+    "    final_res = model.predict(img_compl)\n",
+    "    print(final_res)\n",
+    "    #print(sp)\n",
     "\n",
     "# numpy_array = np.frombuffer(pull, dtype=np.float32)\n",
     "# sp = create_spectrogram(numpy_array, RATE)\n",
     "# print(sp)\n",
     "\n",
-    "stream.stop_stream()\n",
-    "stream.close()\n",
+    "#stream.stop_stream()\n",
+    "##stream.close()\n",
     "p.terminate()"
    ]
   },
@@ -172,54 +291,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:11 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x0000021C8229E0D0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "[[0.00991824 0.9903412 ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tensorflow.keras.models import load_model\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from PIL import Image, ImageFont, ImageDraw\n",
-    "import numpy as np\n",
-    "\n",
-    "model = load_model(r'D:\\save_1.h5')\n",
-    "\n",
-    "img_arr = sp\n",
-    "img_norm = img_arr/255\n",
-    "img_size = img_norm.resize((150, 150, 3))\n",
-    "img_compl = img_norm.reshape(-1, 150, 150, 3)\n",
-    "\n",
-    "final_res = model.predict(img_compl)\n",
-    "print(final_res)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -228,9 +299,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python377jvsc74a57bd00d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4",
+   "display_name": "Python 3.7.7 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -242,7 +312,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.7"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4"
+   }
   }
  },
  "nbformat": 4,
