--- a/main_classifier/do_spectogram.ipynb
+++ b/main_classifier/do_spectogram.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "330450b9",
+   "execution_count": 2,
+   "id": "d60ecb59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "62e92cd1",
+   "execution_count": 3,
+   "id": "c6fa25d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,8 +70,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5ac906b6",
+   "execution_count": 4,
+   "id": "0e2822e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +105,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "7fa7dc87",
+   "execution_count": 5,
+   "id": "1c3c6381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,8 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "6e44c42f",
+   "execution_count": 7,
+   "id": "ccd8b882",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
     "CHANNELS = 2\n",
     "RATE = 44100\n",
     "RECORD_SECONDS = 1\n",
-    "#WAVE_OUTPUT_FILENAME = \"output.wav\"\n",
+    "WAVE_OUTPUT_FILENAME = \"output.wav\"\n",
     "\n",
     "p = pyaudio.PyAudio()\n",
     "\n",
@@ -228,18 +228,18 @@
     "p.terminate()\n",
     "\n",
     "\n",
-    "# wf = wave.open(WAVE_OUTPUT_FILENAME, 'wb')\n",
-    "# wf.setnchannels(CHANNELS)\n",
-    "# wf.setsampwidth(p.get_sample_size(FORMAT))\n",
-    "# wf.setframerate(RATE)\n",
-    "# wf.writeframes(b''.join(frames))\n",
-    "# wf.close()\n"
+    "wf = wave.open(WAVE_OUTPUT_FILENAME, 'wb')\n",
+    "wf.setnchannels(CHANNELS)\n",
+    "wf.setsampwidth(p.get_sample_size(FORMAT))\n",
+    "wf.setframerate(RATE)\n",
+    "wf.writeframes(b''.join(frames))\n",
+    "wf.close()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e2a729a2",
+   "id": "acd2e089",
    "metadata": {
     "scrolled": false
    },
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e3231b42",
+   "id": "dc2cd498",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f2cde1cb",
+   "id": "d0e1ee74",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80117fdd",
+   "id": "982a88f0",
    "metadata": {},
    "outputs": [],
    "source": []
