--- a/main_classifier/test.ipynb
+++ b/main_classifier/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "24c3898f",
+   "id": "c878294d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "52cfe9cb",
+   "id": "87e14dbb",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "cf773304",
+   "id": "77e58891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "653c5096",
+   "id": "2d347c3b",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "36e9e423",
+   "id": "532ff54b",
    "metadata": {},
    "outputs": [
     {
@@ -534,8 +534,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "92646f9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import sounddevice as sd\n",
+    "# from scipy.io.wavfile import write\n",
+    "\n",
+    "# fs = 44100  # Sample rate\n",
+    "# seconds = 1  # Duration of recording\n",
+    "\n",
+    "# myrecording = sd.rec(int(seconds * fs), samplerate=fs, channels=2)\n",
+    "# print(type(myrecording))\n",
+    "#sd.wait()  # Wait until recording is finished\n",
+    "#write('output.wav', fs, myrecording)  # Save as WAV file "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f71e9790",
+   "id": "eb959162",
    "metadata": {},
    "outputs": [],
    "source": []
