--- a/main_classifier/live.ipynb
+++ b/main_classifier/live.ipynb
@@ -55,9 +55,10 @@
     "    plt.close(fig)\n",
     "    plt.close('all')\n",
     "\n",
+    "    return spectrogram\n",
     "    del sample_rate,fig,ax\n",
     "    \n",
-    "    return spectrogram\n",
+    "    #return spectrogram\n",
     "    "
    ]
   },
@@ -475,6 +476,7 @@
     "print(myrecording.shape)\n",
     "print(type(myrecording))\n",
     "sd.wait()\n",
+    "print()\n",
     "sp = create_spectrogram(myrecording, fs)"
    ]
   },
