--- a/main_classifier/do_spectogram.ipynb
+++ b/main_classifier/do_spectogram.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3a84f29c",
+   "execution_count": 4,
+   "id": "d34fd1de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +12,60 @@
     "import time\n",
     "import librosa\n",
     "import matplotlib.pyplot as plt\n",
-    "import librosa.display"
+    "import librosa.display\n",
+    "\n",
+    "from tensorflow.keras.models import load_model\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from PIL import Image, ImageFont, ImageDraw\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "95ea0582",
+   "execution_count": 11,
+   "id": "8de92218",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n",
+      "ok\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-8da2ccac033e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[0maudio\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAudioHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m     \u001b[1;31m# open the the stream\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmainloop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# main operations with librosa\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m \u001b[0maudio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-11-8da2ccac033e>\u001b[0m in \u001b[0;36mmainloop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     42\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ok'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m             \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2.0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     45\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "class AudioHandler(object):\n",
     "    def __init__(self):\n",
     "        self.FORMAT = pyaudio.paFloat32\n",
     "        self.CHANNELS = 1\n",
-    "        self.RATE = 48000\n",
+    "        self.RATE = 44100\n",
     "        self.CHUNK = 1024 * 2\n",
+    "        self.RECORD_SECONDS = 1\n",
+    "        self.INPUT_DEVICE_INDEX = 1 # change this parametr to good work\n",
     "        self.p = None\n",
     "        self.stream = None\n",
     "\n",
@@ -38,8 +76,9 @@
     "                                  rate=self.RATE,\n",
     "                                  input=True,\n",
     "                                  output=False,\n",
-    "                                  stream_callback=self.callback,\n",
-    "                                  frames_per_buffer=self.CHUNK)\n",
+    "                                  #stream_callback=self.callback,\n",
+    "                                  frames_per_buffer=self.CHUNK,\n",
+    "                                  input_device_index = self.INPUT_DEVICE_INDEX)\n",
     "\n",
     "    def stop(self):\n",
     "        self.stream.close()\n",
@@ -52,26 +91,29 @@
     "\n",
     "    def mainloop(self):\n",
     "        while (self.stream.is_active()): # if using button you can set self.stream to 0 (self.stream = 0), otherwise you can use a stop condition\n",
-    "            #data = stream.read(self.CHUNK)\n",
-    "            #data_float = np.fromstring(data , dtype=np.float32)\n",
-    "            #data_np = np.array(data_float , dtype='d')\n",
-    "            #data in 1D array\n",
-    "            #mfcc = librosa.feature.mfcc(data_np.flatten() , self.RATE)\n",
-    "            #self.callback(self.stream, 10, 10, 10)\n",
-    "            #print(mfcc)\n",
+    "            model = load_model(r'D:\\save_1.h5')\n",
+    "            \n",
+    "            frames = []  \n",
+    "            for i in range(0, int(self.RATE / self.CHUNK * self.RECORD_SECONDS)):\n",
+    "                data = self.stream.read(self.CHUNK)\n",
+    "                frames.append(data)   \n",
+    "            frames = b''.join(frames)\n",
+    "            \n",
+    "            print('ok')\n",
+    "                \n",
     "            time.sleep(2.0)\n",
     "\n",
     "\n",
     "audio = AudioHandler()\n",
     "audio.start()     # open the the stream\n",
-    "#audio.mainloop()  # main operations with librosa\n",
+    "audio.mainloop()  # main operations with librosa\n",
     "audio.stop()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1e32ce69",
+   "id": "83605215",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "41d8bfb0",
+   "id": "1ebbcc48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "20aa2aa7",
+   "id": "a75c6f4b",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "11c37948",
+   "id": "2de1a2cd",
    "metadata": {
     "scrolled": false
    },
@@ -271,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "019b538f",
+   "id": "250b5b38",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c9d5fa1f",
+   "id": "8e2e6bd6",
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a87220bf",
+   "id": "0944fb07",
    "metadata": {},
    "outputs": [],
    "source": []
