add new dataset

--- a/main_classifier/do_spectogram.ipynb
+++ b/main_classifier/do_spectogram.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d34fd1de",
+   "id": "99f8090c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "8de92218",
+   "id": "fa02a4b1",
    "metadata": {},
    "outputs": [
     {
@@ -97,8 +97,8 @@
     "            for i in range(0, int(self.RATE / self.CHUNK * self.RECORD_SECONDS)):\n",
     "                data = self.stream.read(self.CHUNK)\n",
     "                frames.append(data)   \n",
-    "            frames = b''.join(frames)\n",
-    "            \n",
+    "            frame = b''.join(frames)\n",
+    "            callback(self, frame, len(frames), )\n",
     "            print('ok')\n",
     "                \n",
     "            time.sleep(2.0)\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "83605215",
+   "id": "6c35223d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1ebbcc48",
+   "id": "5bed841a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a75c6f4b",
+   "id": "496f4115",
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2de1a2cd",
+   "id": "4e153ae5",
    "metadata": {
     "scrolled": false
    },
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "250b5b38",
+   "id": "c2c8949f",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8e2e6bd6",
+   "id": "fc683c4d",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0944fb07",
+   "id": "4126b6bb",
    "metadata": {},
    "outputs": [],
    "source": []
