--- a/main_classifier/Untitled.ipynb
+++ b/main_classifier/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b8188c95",
+   "id": "38fee94e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7768bc3b",
+   "id": "da76f043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,30 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "999ffc2b",
+   "execution_count": 7,
+   "id": "25919abf",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'glob' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-b08c70e26edb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m#r\"D:\\reposetory\\Save_Transport\\dataset\\test\\one_sec_noise\\*\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mData_dir\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mglob\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"D:\\reposetory\\Save_Transport\\new_dataset\\cut\\*\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;31m#%load_ext memory_profiler\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;31m#%memit\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'glob' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#r\"D:\\reposetory\\Save_Transport\\dataset\\train\\one_sec_cut\\*\"\n",
     "#r\"D:\\reposetory\\Save_Transport\\dataset\\train\\one_sec_noise\\*\"\n",
     "#r\"D:\\reposetory\\Save_Transport\\dataset\\test\\one_sec_cut\\*\"\n",
     "#r\"D:\\reposetory\\Save_Transport\\dataset\\test\\one_sec_noise\\*\"\n",
-    "import \n",
+    "from glob import glob\n",
     "\n",
-    "Data_dir=np.array(glob(r\"D:\\reposetory\\Save_Transport\\new_dataset\\cut\\*\"))\n",
+    "Data_dir=np.array(glob(r\"D:\\reposetory\\Save_Transport\\new_data\\cut\\*\"))\n",
     "#%load_ext memory_profiler\n",
     "#%memit \n",
     "\n",
@@ -90,13 +78,13 @@
     "    filename,name = file,file.split('\\\\')[-1].split('.')[0]\n",
     "    path = r'D:\\reposetory\\Save_Transport\\new_dataset\\cut\\\\' + name + '.jpg'\n",
     "    do_spec(filename, path)\n",
-    "gc.collect()"
+    "#gc.collect()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7104bb3",
+   "id": "7e233e94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "171ab477",
+   "id": "910385a9",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d2984f49",
+   "id": "f4f4d9ce",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0568c663",
+   "id": "3e7e4e5d",
    "metadata": {},
    "outputs": [],
    "source": []
