add one half real time project

--- a/main_classifier/Untitled.ipynb
+++ b/main_classifier/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "38fee94e",
+   "id": "f8e63422",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "da76f043",
+   "id": "31629ad8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "a4870428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sounddevice as sd\n",
+    "from scipy.io.wavfile import write\n",
+    "time.sleep(2)\n",
+    "\n",
+    "fs = 44100  # Sample rate\n",
+    "seconds = 1  # Duration of recording\n",
+    "\n",
+    "record = sd.rec(int(seconds * fs), samplerate = 44100, channels=1)\n",
+    "sd.wait()\n",
+    "write('output0.wav', fs, record)                                   #Save as WAV file \n",
+    "\n",
+    "from PIL import Image\n",
+    "\n",
+    "do_spec('output0.wav', )\n",
+    "#create_spectrogram()\n",
+    "img = Image.open('/home/aigaf/Desktop/GITHUB/output0.jpg')\n",
+    "\n",
+    "img_compl = preprocessing_spectrogram(np.asarray(img))\n",
+    "model = load_model('/home/aigaf/Downloads/Telegram Desktop/save_1.h5')\n",
+    "\n",
+    "final_result = model.predict(img_compl) # [1., 0.] cut sound\n",
+    "\n",
+    "if (final_result[0][0] == 1):\n",
+    "    print(\"Разрез бумаги\")\n",
+    "else:\n",
+    "    print(\"Посторонний шум\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
-   "id": "25919abf",
+   "id": "646aad50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e233e94",
+   "id": "5b79b239",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "910385a9",
+   "id": "e9b9e64d",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f4f4d9ce",
+   "id": "5b3a3bab",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e7e4e5d",
+   "id": "8d069909",
    "metadata": {},
    "outputs": [],
    "source": []
