--- a/main_classifier/live.ipynb
+++ b/main_classifier/live.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,15 @@
     "import keyboard\n",
     "import cv2\n",
     "import io\n",
-    "import wave"
+    "import wave\n",
+    "\n",
+    "import os\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg') # No pictures displayed \n",
+    "import pylab\n",
+    "import librosa\n",
+    "import librosa.display\n",
+    "import numpy as np"
    ]
   },
   {
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +84,25 @@
     "    plt.close('all')\n",
     "  \n",
     "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_spec (record, save_path):\n",
+    "    sig = record\n",
+    "    fs = 44100\n",
+    "    #sig, fs = librosa.load(filename, sr=None)\n",
+    "\n",
+    "    pylab.axis('off') # no axis\n",
+    "    pylab.axes([0., 0., 1., 1.], frameon=False, xticks=[], yticks=[]) # Remove the white edge\n",
+    "    S = librosa.feature.melspectrogram(y=sig, sr=fs)\n",
+    "    librosa.display.specshow(librosa.power_to_db(S, ref=np.max))\n",
+    "    pylab.savefig(save_path, bbox_inches=None, pad_inches=0)\n",
+    "    pylab.close()"
    ]
   },
   {
@@ -344,27 +371,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(44100, 1) rec\n",
+      "(132300, 1) rec\n",
       "<class 'numpy.ndarray'>\n",
-      "(44100,)\n",
-      "[ 0.02490234  0.02560425  0.02639771 ... -0.02059937 -0.02017212\n",
-      " -0.01773071]\n"
+      "(132300,)\n",
+      "WARNING:tensorflow:6 out of the last 6 calls to <function Model.make_predict_function.<locals>.predict_function at 0x0000016681C08E50> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/tutorials/customization/performance#python_or_tensor_args and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "Разрез бумаги\n"
      ]
     }
    ],
    "source": [
     "import sounddevice as sd\n",
     "from scipy.io.wavfile import write\n",
+    "from PIL import Image\n",
     "\n",
     "fs = 44100  # Sample rate\n",
-    "seconds = 1  # Duration of recording\n",
+    "seconds = 3  # Duration of recording\n",
     "\n",
     "record = sd.rec(int(seconds * fs), samplerate=fs, channels=1)\n",
     "print(record.shape, \"rec\")\n",
@@ -381,8 +409,20 @@
     "print(record.shape)\n",
     "\n",
     "\n",
-    "#img_array = create_spectrogram(record, fs) \n",
-    "    \n",
+    "img_array = do_spec(record, 'outspec.jpg') \n",
+    "\n",
+    "\n",
+    "img = Image.open(r'D:\\reposetory\\Save_Transport\\main_classifier\\outspec.jpg')\n",
+    "\n",
+    "img_compl = preprocessing_spectrogram(np.asarray(img))\n",
+    "model = load_model(r'D:\\save_1.h5')\n",
+    "\n",
+    "final_result = model.predict(img_compl) # [1., 0.] cut sound\n",
+    "\n",
+    "if (final_result[0][0] == 1):\n",
+    "    print(\"Разрез бумаги\")\n",
+    "else:\n",
+    "    print(\"Посторонний шум\")\n",
     "    #spectrogram to console\n",
     "#plt.imshow(img_array, interpolation='nearest') \n",
     "#plt.show()\n",
@@ -395,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
