--- a/main_classifier/live_format.ipynb
+++ b/main_classifier/live_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "1142873b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "3da9e901",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,8 @@
     "def do_spec (record, save_path):\n",
     "    sig = record\n",
     "    fs = 44100\n",
-    "    #sig, fs = librosa.load(filename, sr=None)\n",
-    "\n",
+    "    sig, fs = librosa.load(filename, sr=None)\n",
+    "    pylab.figure()\n",
     "    pylab.axis('off') # no axis\n",
     "    pylab.axes([0., 0., 1., 1.], frameon=False, xticks=[], yticks=[]) # Remove the white edge\n",
     "    S = librosa.feature.melspectrogram(y=sig, sr=fs)\n",
@@ -47,28 +47,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_spec_1 (record):\n",
+    "      \n",
+    "    fig = pylab.figure()\n",
+    "    pylab.axis('off') # no axis\n",
+    "    pylab.axes([0., 0., 1., 1.], frameon=False, xticks=[], yticks=[]) # Remove the white edge\n",
+    "    S = librosa.feature.melspectrogram(y=record, sr=fs)\n",
+    "    librosa.display.specshow(librosa.power_to_db(S, ref=np.max))\n",
+    "    pylab.close()\n",
+    "\n",
+    "    return get_img_from_fig(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessing_spectrogram(img_arr):\n",
+    "    \n",
+    "    f = cv2.resize(img_arr, (150, 150))\n",
+    "    res = f.reshape(-1, 150, 150, 3)\n",
+    "    \n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeNewFormatArr(old_arrays):\n",
+    "\n",
+    "    new_array = []\n",
+    "    for array in old_arrays:\n",
+    "        for elem in array:\n",
+    "            new_array.append(elem)\n",
+    "\n",
+    "    new_array = np.asarray(new_array)\n",
+    "\n",
+    "    return new_array\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    def get_img_from_fig(fig):\n",
+    "\n",
+    "        buf = io.BytesIO()\n",
+    "        fig.savefig(buf, format='png')\n",
+    "        buf.seek(0)\n",
+    "        img_arr = np.frombuffer(buf.getvalue(), dtype=np.uint8)\n",
+    "        buf.close()\n",
+    "        img = cv2.imdecode(img_arr, 1)\n",
+    "        img = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        return img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "4430bbd4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "(132300, 1) rec\n",
-      "<class 'numpy.ndarray'>\n",
-      "(132300,)\n"
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n",
+      "Посторонний шум\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'preprocessing_spectrogram' is not defined",
      "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-b6a06df7e1dd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[0mimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'D:\\reposetory\\Save_Transport\\main_classifier\\outspec.jpg'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m \u001b[0mimg_compl\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpreprocessing_spectrogram\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mload_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'D:\\save_1.h5'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'preprocessing_spectrogram' is not defined"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-88764d2811ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mrecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseconds\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msamplerate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchannels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0msd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# Wait until recording is finished\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0mrecord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmakeNewFormatArr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecord\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sounddevice.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(ignore_errors)\u001b[0m\n\u001b[1;32m    390\u001b[0m     \"\"\"\n\u001b[1;32m    391\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0m_last_callback\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 392\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_last_callback\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mignore_errors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    393\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    394\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sounddevice.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, ignore_errors)\u001b[0m\n\u001b[1;32m   2590\u001b[0m         \"\"\"\n\u001b[1;32m   2591\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2592\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2593\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2594\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstream\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mignore_errors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    550\u001b[0m             \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_flag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    551\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 552\u001b[0;31m                 \u001b[0msignaled\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cond\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtimeout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    553\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0msignaled\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    554\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/threading.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m    \u001b[0;31m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 296\u001b[0;31m                 \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    297\u001b[0m                 \u001b[0mgotit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -78,36 +180,26 @@
     "from PIL import Image\n",
     "\n",
     "fs = 44100  # Sample rate\n",
-    "seconds = 3  # Duration of recording\n",
+    "seconds = 1  # Duration of recording\n",
+    "model = load_model('/home/aigaf/Downloads/Telegram Desktop/new_model.h5')\n",
     "\n",
-    "record = sd.rec(int(seconds * fs), samplerate=fs, channels=1)\n",
-    "print(record.shape, \"rec\")\n",
-    "sd.wait()  # Wait until recording is finished\n",
+    "while(True):\n",
+    "   \n",
+    "    record = sd.rec(int(seconds * fs), samplerate=fs, channels=1)\n",
+    "    sd.wait()  # Wait until recording is finished\n",
     "\n",
+    "    record = makeNewFormatArr(record)\n",
+    "    record = np.asarray(record)\n",
+    "    img_array = do_spec_1(record)\n",
     "\n",
-    "a = []\n",
-    "for i in record:\n",
-    "    for t in i:\n",
-    "        a.append(t)\n",
-    "record = np.asarray(a)\n",
-    "print(type(record))\n",
-    "print(record.shape)\n",
+    "    img_compl = preprocessing_spectrogram(img_array)\n",
     "\n",
+    "    final_result = model.predict(img_compl) # [1., 0.] cut sound\n",
     "\n",
-    "img_array = do_spec(record, 'outspec.jpg') \n",
-    "\n",
-    "\n",
-    "img = Image.open(r'D:\\reposetory\\Save_Transport\\main_classifier\\outspec.jpg')\n",
-    "\n",
-    "img_compl = preprocessing_spectrogram(np.asarray(img))\n",
-    "model = load_model(r'D:\\save_1.h5')\n",
-    "\n",
-    "final_result = model.predict(img_compl) # [1., 0.] cut sound\n",
-    "\n",
-    "if (final_result[0][0] == 1):\n",
-    "    print(\"Разрез бумаги\")\n",
-    "else:\n",
-    "    print(\"Посторонний шум\")"
+    "    if (final_result[0][0] == 1):\n",
+    "        print(\"Разрез бумаги\")\n",
+    "    else:\n",
+    "        print(\"Посторонний шум\")\n"
    ]
   },
   {
@@ -121,9 +213,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python377jvsc74a57bd00d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4",
+   "display_name": "Python 3.7.7 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -135,7 +226,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.7"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "0d537df178d4a96c2cf8ca99df555b0d4bf3b31be3996b0ee2dcd6eb18f548f4"
+   }
   }
  },
  "nbformat": 4,
